Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.15.0-rc1
-
None
-
0ca487b265160549dc0a445b4e74d68033ec4c1c (qt-creator/tqtc-qt-creator/master)
Description
To reproduce:
1. Apply this patch https://codereview.qt-project.org/c/qt-creator/qt-creator/+/347452
2. Load creator project into creator
3. As soon as you see the "Shutdown now" printout, close creator. It should crash.
The reason is that ClangEditorDocumentProcessor::runImpl() cancels the last future and sets the new one (m_parserWatcher), so the old one may still be running if the shutdown comes now.
Attachments
Issue Links
- is required for
-
QTCREATORBUG-25709 Reduce crashes on exit / session switch
- Closed
For Gerrit Dashboard: QTCREATORBUG-25673 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
347452,2 | WIP: Crash in ClangEditorDocumentProcessor on shutdown | master | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
347454,2 | Fix a possible crash in ClangEditorDocumentProcessor | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |